--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>shop</title>
   <!--样式重置-->
   <link rel="stylesheet" href="/static/css/reset.css">
+  <!--调用图标字体-->
+  <link rel="stylesheet" href="/static/css/iconfont.css">
 </head>
 <body>
 <div id="app"></div>
